<resources>
    <string name="app_name">管理助手</string>
    <string name="radio_group_1_sy">首页</string>
    <string name="radio_group_1_txl">通讯录</string>
    <string name="radio_group_1_my">我的</string>
    <string name="newcustomer_str">新增订单量(本日)</string>
    <string name="getmoney_str">收款量(本日)</string>
    <string name="banzhengnum_str">办证步骤量(本日)</string>
    <string name="lownum_str">低分预警</string>
    <string name="banzhengyeji_str">办证业绩统计(本日)</string>
    <string name="banzhengout">到期合同</string>
    <string name="tallying">记账中</string>
    <string name="mycustomer">我的客户</string>
    <string name="yuan">%1$.2f</string>
    <string name="heji_yuanjiaofen">¥ %1$.2f</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>


    <string name="shoujihao">手机号：</string>
    <string name="zhanghao">账号：</string>
    <string name="mima">密　码：</string>
    <string name="denglu">登 录</string>
    <string name="zhuce_bt_str">注册</string>
    <string name="next_zhuce">确 定</string>
    <string name="yanzheng_word">验证码：</string>
    <string name="get_yanzhen">发送验证码</string>
    <string name="tip_input_pnum">请输入手机号</string>
    <string name="waitting_verification">正在获取验证码...</string>
    <string name="wrong_verification">出错，请重新获取</string>
    <string name="tip_input_password">请输入密码</string>
    <string name="tip_input_yanzheng">请输入验证码</string>
    <string name="zhengzai_zhuce">正在注册...</string>
    <string name="zhengzai_login">正在登录...</string>
    <string name="success_login">登录成功</string>
    <string name="fotget_mm_bt_str">忘记密码？</string>
    <string name="login_changhu">登录账户</string>
    <string name="user_zhuce">用户注册</string>
</resources>
