<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="3dp"
        >
        <TableRow>
            <LinearLayout
                android:id="@+id/lLayout01"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/orderNumber"
                    android:layout_width="50dp"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="0"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/newcustomer_str"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:padding="8dip"
                    />
            </LinearLayout>

         <!--   <View android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray2"/>-->
            <LinearLayout
                android:id="@+id/lLayout02"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"

                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/moneyNumber"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_orange_light"
                    android:text="0"

                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/getmoney_str"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:padding="8dip"
                    />
            </LinearLayout>

        </TableRow>

        <TableRow>

            <LinearLayout
                android:id="@+id/lLayout03"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"

                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/stepNumber"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="0"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/banzhengnum_str"
                    android:textSize="13sp"
                    android:padding="8dip"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/textView" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lLayout04"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"

                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lowNumber"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="0"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lownum_str"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:padding="8dip"/>
            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:id="@+id/lLayout05"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/permitNumber"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_purple"
                    android:text="0"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/banzhengyeji_str"
                    android:padding="8dip"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:id="@+id/textView2" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lLayout06"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/myCustomer"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:text="0"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mycustomer"
                    android:padding="8dip"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="13sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:id="@+id/lLayout07"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/OutNumber"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_blue_bright"
                    android:text="0"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/banzhengout"
                    android:padding="8dip"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                     />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lLayout08"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/permittingCount"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:text="0"
                    android:gravity="center"
                    android:textColor="@color/colorGray"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dip"
                    android:text="办证中"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="13sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:id="@+id/lLayout09"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/TallyNumber"
                    android:layout_width="50dp"
                    android:textSize="40dp"
                    android:layout_height="55dp"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="0"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tallying"
                    android:padding="8dip"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lLayout10"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_margin="2dp"
                android:orientation="vertical"
                >

            </LinearLayout>
        </TableRow>
    </TableLayout>
    </ScrollView>
</LinearLayout>
